[tool.poetry]
name = "traps-of-pandas"
version = "0.1.0"
description = ""
authors = ["ziembajankowska <ziembajankowska@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
pyarrow = "^18.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
